update std ssh opts

--- a/ssh.d/config
+++ b/ssh.d/config
@@ -3,10 +3,19 @@ HostName passport.mcpaints.com
 
 Host trantor
 HostName trantor.lecuanda.com
+LocalForward 5900 localhost:5900
+LocalForward 5901 localhost:5901
+LocalForward 5902 localhost:5902
+
+Host lax
+HostName lax.mcpaints.net
 
 Host github
-HostName githup.com
+HostName github.com
 User git
 
 Host *
 User hector
+Compression yes
+ForwardAgent yes
+GatewayPorts yes
