rucoms need to be in repo untilbmajefile works

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@ zsticky
 *.swp
 
 #installed runcoms
-.zlogin
-.zlogout
-.zpreztorc
-.zprofile
-.zshrc
+#.zlogin
+#.zlogout
+#.zpreztorc
+#.zprofile
+#.zshrc
 
