--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ image: busybox:latest
 
 before_script:
   - echo "Before script section"
-  - echo "For example you might run an update here or install a build dependency"
+  - apt-get -y install bsdowl bmake
   - echo "Or perhaps you might print out some debugging details"
    
 after_script:
