fixed id_rsa depensency

--- a/ssh.d/Makefile
+++ b/ssh.d/Makefile
@@ -3,14 +3,14 @@ PFX=/data/data/com.termux/files
 ETC=${PFX}/usr/etc
 HOM=${PFX}/home		
 
-.PHONY: install serverconfig personalconfig conf ssh keys
+.PHONY: install serverconfig personalconfig conf ssh 
 
 install: ssh conf
 
-serverconfig: install
+serverconfig: 
 	install sshd_conf -D ${ETC}/sshd_config
 
-personalconfig: keys
+personalconfig: $(HOME)/.ssh/id_rsa
 	install authorized_hosts -D ${HOM}/.ssh/autorized_hosts
 	install config -D ${HOM}/.ssh
 		
@@ -19,6 +19,6 @@ conf: personalconfig serverconfig
 ssh: 
 	-pkg install -y -q	openssh mosh sshpass
 
-keys: install
+$(HOME)/.ssh/id_rsa: 
 	ssh-keygen 
 			
