--- a/zsh.d/Makefile
+++ b/zsh.d/Makefile
@@ -1,15 +1,17 @@
 
 .PHONY: install  zshenv runcoms
-.SHELL: zsh
 
-RUNCOMS!=ls zsh.d/z*
+
+RUNCOMS = zsh.d/zlogin zsh.d/zlogout zsh.d/upreztorc zsh.d/zprofile zsh.d/zshrc 
+RC = $(HOME)/.zconf/.zlogin $(HOME)/.zconf/.zlogout $(HOME)/.zconf/.zpreztorc $(HOME)/.zconf/.zprofile $(HOME)/.zconf/.zshrc 
 
 install:  runcoms zshenv 
+	
+$(RC): $(RUNCOMS)
 
 zshenv:: zsh.d/zshenv 
 	install $? $(HOME)/.$@
 	
-runcoms:: $(RUNCOMS)
-	for rc in $$(RUNCOMS) \
-		install $$rc $(ZDOTDIR)/.$@
-
+$(HOME)/.zconf/.%: zsh.d/%
+	install $< $@
+	
