Updated tmux.conf removing references to legacy dirs

--- a/tmux.d/tmux.conf
+++ b/tmux.d/tmux.conf
@@ -72,8 +72,8 @@
         bind    b set-option  status # toggle status bar
         bind    c new-window
         bind    C display "Client ops" \; switch-client -T client
-        bind    f source-file ~/src/Dotfiles/dotfiles/tmux.d/kbd-fkeys-passport.tmux \; display-message "Passport Function Keys Loaded"
-        bind    F source-file ~/src/Dotfiles/dotfiles/tmux.d/kbd-fkeys-reset.tmux \; display-message "Xterm Function Keys Loaded"
+        bind    f source-file $HOME/.zconf/tmux.d/kbd-fkeys-passport.tmux \; display-message "Passport Function Keys Loaded"
+        bind    F source-file $HOME/.zconf/tmux.d/kbd-fkeys-reset.tmux \; display-message "Xterm Function Keys Loaded"
         bind    h previous-window
         bind    j select-window -t {start}
         bind    k select-window -t {end}
@@ -85,7 +85,7 @@
         bind    M display "Monitoring" \; switch-client -T monitor
         bind    p paste-buffer  # case insensitive paste
         bind    P paste-buffer
-        bind    r source-file $HOME/src/Dotfiles/dotfiles/tmux.d/tmux.conf \; display "Config Reloaded!"
+        bind    r source-file $HOME/.zconf/tmux.d/tmux.conf \; display "Config Reloaded!"
         bind    R display "Resize" \; switch-client -T resize
         bind    s display "Sessions" \; switch-client -T monitor
         bind    v copy-mode # case insentitive  copy mode
@@ -217,7 +217,7 @@
     set -g status-interval 60
     set -g status-keys vi
     set -g status-justify left
-    source-file ~/src/Dotfiles/dotfiles/tmux.d/statusline.tmux
+    source-file .zconf/tmux.d/statusline.tmux
 # end status bar }
 
 #{1 don't forget to reset foldlevel   }
