--- a/tmux.d/tmux.conf
+++ b/tmux.d/tmux.conf
@@ -1,4 +1,4 @@
-# vim: ft=tmux foldmarker={,} foldmethod=marker foldlevel=1 foldenable :
+ # vim: ft=tmux foldmarker={,} foldmethod=marker foldlevel=1 foldenable :
 
 # Global Server Options:
 #{2
@@ -217,7 +217,7 @@
     set -g status-interval 60
     set -g status-keys vi
     set -g status-justify left
-    source-file .zconf/tmux.d/statusline.tmux
+    source-file $HOME/.zconf/tmux.d/statusline.tmux
 # end status bar }
 
 #{1 don't forget to reset foldlevel   }
