--- a/tmux.d/tmux.conf
+++ b/tmux.d/tmux.conf
@@ -13,8 +13,8 @@
 # Global Session Options:
 # {1
     # Misc Defaults:  {
-        # set -g default-command 'exec /usr/local/bin/zsh -o login'
-        set -g default-shell '/usr/bin/zsh'
+        set -g default-command 'exec /usr/local/bin/zsh -o login'
+        # set -g default-shell '/usr/local/bin/zsh'
         set -g default-terminal 'screen-256color'
         set -g destroy-unattached off
         set -g detach-on-destroy on
