--- a/tmux.d/tmux.conf
+++ b/tmux.d/tmux.conf
@@ -7,7 +7,7 @@
     set -g message-limit 300
     set -g escape-time 300
     set -g exit-unattached off
-    set -g quiet off
+#    set -g quiet off
 # } end global server options
 
 # Global Session Options:
@@ -42,12 +42,12 @@
 
     # Mouse  {
         set -g mouse on
-        set -g mouse-utf8 on
+#        set -g mouse-utf8 on
     # end mouse }
 
     # Visual alerts & bindings for them: {
         set -g bell-action any
-        set -g bell-on-alert on
+#        set -g bell-on-alert on
         set -g visual-activity on
         set -g visual-bell off
         # set -g visual-content on
@@ -185,10 +185,10 @@
     # Clipboard acces from TMUX X11!: {
         bind C-c run "tmux save-buffer - | xclip -i"
         bind C-v run "xclip -o | tmux load-buffer - && tmux paste-buffer"
-        bind -t vi-copy Y copy-pipe "xclip -i"
-        bind -t vi-copy y copy-pipe "xclip -i"
-        bind -t vi-copy v begin-selection
-        bind -t vi-copy V begin-selection
+#        bind -t vi-copy Y copy-pipe "xclip -i"
+#        bind -t vi-copy y copy-pipe "xclip -i"
+#        bind -t vi-copy v begin-selection
+#        bind -t vi-copy V begin-selection
     # End }
 
     # # Clipboard acces from TMUX Mac!: {
@@ -211,13 +211,13 @@
 # Status bar:
 # {2
     set -g status on
-    set -g set-titles on
+#    set -g set-titles on
     set -g set-titles-string '#h'
-    set -g status-utf8 on
+#    set -g status-utf8 on
     set -g status-interval 60
     set -g status-keys vi
     set -g status-justify left
-    source-file ~/src/Dotfiles/dotfiles/tmux.d/statusline.tmux
+    source-file ~/.zconf/tmux.d/statusline.tmux
 # end status bar }
 
 #{1 don't forget to reset foldlevel   }
