sshd for the termux environment

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 *.log
+logs.d/*
+*.swp
 *.zwc
 *.zwc.*
 *~
+.revolver
 .zcomp*
 .zhistory
 .zprezto
 zsticky
-*.swp
 
 #installed runcoms
 #.zlogin
