Changed font to Monoid, Better Makefile

--- a/i3.d/i3.config
+++ b/i3.d/i3.config
@@ -24,7 +24,7 @@ set $alt Mod1
 set $PYTHOMBIN="/home/hector/anaconda3/bin/"
 set $STATUSCMD="py3status"
 set $BARCONFIG "gvim ~/.config/i3status/config"
-set $BARFONT pango:Input Mono Compressed Black 9
+set $BARFONT pango: Monoid 9
 set $BORDER_FAT 3
 set $BORDER_SKINNY 1
 set $CLICK "xdotool click --clearmodifiers 2"
@@ -42,7 +42,7 @@ set $XZOOMKILL "killall -9 xzoom"
 set $ZCONFIG "gvim  ~/.zconf/zshenv ~/.zconf/zprofile ~/.zconf/zshrc ~/.zconf/zpreztorc ~/.zconf/zlogin ~/.zconf/zlogout"
 
 # General options
-font pango:Input Mono Compressed Light 7
+font pango: Monoid 7
 floating_maximum_size 1024 x 768
 floating_minimum_size 20 x 20
 floating_modifier $mod
@@ -131,6 +131,7 @@ bindsym $mod+$hft+h focus left
 bindsym $mod+$hft+j focus down
 bindsym $mod+$hft+k focus up
 bindsym $mod+$hft+l focus right
+bindsym $mod+$hft+p exec $SCREENSHOTCMD
 bindsym $mod+$hft+s scratchpad show
 bindsym $mod+$hft+t exec $URXVTERM
 bindsym $mod+$hft+w workspace back_and_forth
@@ -181,7 +182,7 @@ mode command {
     bindsym r      reload,  mode default
     bindsym v      exec $VIMCONFIG,  mode default
     bindsym x      exec $XRESOURCES, mode default
-    bindsym z      exec $ZCONFIG, mode default
+    bindsym z      exec $ZCONFIG,    mode default
 
     bindsym Escape mode command
     bindsym Return mode default
@@ -238,7 +239,6 @@ mode border {
     bindsym Down  focus down
     bindsym Left  focus left
     bindsym Right focus right
-
     bindsym $hft+f focus mode_toggle
     bindsym f      focus mode_toggle
 
@@ -336,6 +336,7 @@ mode setplit {
 
     bindsym Escape mode command
     bindsym Return mode default
+
 }
 
 bar {
@@ -347,6 +348,7 @@ bar {
       tray_output primary
       status_command py3status
  }
+
 
 # bar {
 #       id bar-2
