--- a/i3.d/i3.config
+++ b/i3.d/i3.config
@@ -1,4 +1,4 @@
-#m  _ _____   _                               _                       _
+#  _ _____   _                               _                       _
 # (_)___ /  | | __ _ _   _  ___ _ __ ___  __| |  _ __ ___   ___   __| | ___  ___
 # | | |_ \  | |/ _` | | | |/ _ \ '__/ _ \/ _` | | '_ ` _ \ / _ \ / _` |/ _ \/ __|
 # | |___) | | | (_| | |_| |  __/ | |  __/ (_| | | | | | | | (_) | (_| |  __/\__ \
@@ -33,13 +33,13 @@ set $DMENU "i3-dmenu-desktop --dmenu='rofi -dmenu -i -p Run: '"
 set $RELOADXRSC "xrdb -merge ~/.Xresources"
 set $SCREENSHOTCMD "scrot '%Y%m%d-%H%M%S.jpg' -e 'mv $f ~/Pictures/screenshots'"
 set $SHELLCMD "exec rxvt-unicode -e /usr/bin/zsh -c %s"
-set $URXVTERM "rxvt-unicode +sb -e /usr/bin/zsh -o login"
-set $VIMCONFIG "gvim ~/src/Dotfiles/dotfiles/vim.d/vimrc.*"
+set $URXVTERM "exec rxvt-unicode +sb -e /usr/bin/zsh -o login"
+set $VIMCONFIG "gvim ~/.zconf/vim.d/vimrc.*"
 set $XKILLCMD "xkill"
-set $XTERMCMD "uxterm /usr/bin/zsh -ls"
+set $XTERMCMD "exec uxterm /usr/bin/zsh -ls"
 set $XZOOMCMD "killall xzoom ; xzoom"
 set $XZOOMKILL "killall -9 xzoom"
-set $ZCONFIG "gvim  ~/.zconf/zshenv ~/.zconf/zprofile ~/.zconf/zshrc ~/.zconf/zpreztorc ~/.zconf/zlogin ~/.zconf/zlogout"
+set $ZCONFIG "gvim  ~/.zconf/zsh.d/z*
 
 # General options
 font pango: Monoid 7
@@ -174,7 +174,7 @@ mode command {
     bindsym Return mode default
  }
 
- mode config {
+mode config {
     bindsym b      exec $BARCONFIG,  mode default
     bindsym c      exec $RELOADXRSC, mode default
     bindsym e      exec $CONFIGFILE, mode default
@@ -204,7 +204,7 @@ mode border {
     bindsym Return mode default
 }
 
- mode movetoworkspace {
+mode movetoworkspace {
     bindsym b        move container to workspace back_and_forth, mode default
     bindsym Tab      move container to workspace next, mode default
     bindsym $hft+Tab move container to workspace prev, mode default
@@ -229,7 +229,7 @@ mode border {
     bindsym Return mode default
  }
 
- mode changefocus {
+mode changefocus {
     bindsym $hft+Up    focus parent, border pixel $BORDER_FAT, mode default
     bindsym $hft+Down  focus child,  border pixel $BORDER_FAT, mode default
     bindsym $hft+j     focus child,  mode default
@@ -251,7 +251,7 @@ mode border {
     bindsym Return mode default
  }
 
- mode layout {
+mode layout {
     bindsym d     layout   default,      mode default
     bindsym h     layout   splith,       mode default
     bindsym s     layout   stacking,     mode default
@@ -269,7 +269,7 @@ mode border {
     bindsym Return mode default
  }
 
- mode movement {
+mode movement {
     bindsym Up    move up
     bindsym Down  move down
     bindsym Right move right
@@ -285,7 +285,7 @@ mode border {
     bindsym Return mode default
  }
 
- mode resize {
+mode resize {
     bindsym Up    resize grow   height   5 px or 1 ppt
     bindsym Down  resize grow   height   5 px or 1 ppt
     bindsym Right resize grow   width    5 px or 1 ppt
